--- a/tasks/add-secret-imagepull.yaml
+++ b/tasks/add-secret-imagepull.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   desc: use task `add-secret-imagepull` to create a secret for image pulling in the specified namespace within a Kubernetes cluster.
   nodeName: anymaster
+  typeRef: cluster
   variables:
     secret_server: ""
     secret_username: ""
