--- a/tasks/check-pod-existed.yaml
+++ b/tasks/check-pod-existed.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   desc: use task `check-pod-existed` to check whether the pod existed and get pod namespace, variables must to set `pod`
   nodeName: anymaster
+  typeRef: cluster
   variables:
     podname: ""
   steps:
