--- a/tasks/get-node-status.yaml
+++ b/tasks/get-node-status.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   desc: use task `get-node-status` to get node status, variables must to set `node`
   nodeName: anymaster
+  typeRef: cluster
   variables:
     node: ""
   steps:
