--- a/tasks/inspect-node.yaml
+++ b/tasks/inspect-node.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   desc: use task `inspect-node` to get node details in cluster, variables must to set `node`
   nodeName: anymaster
+  typeRef: cluster
   variables:
     node: ""
   steps:
