--- a/tasks/list-pods-image.yaml
+++ b/tasks/list-pods-image.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   desc: use task `list-podsimage` to list pod image in cluster, variables must to set `namespace`
   nodeName: anymaster
+  typeRef: cluster
   variables:
     namespace: ""
   steps:
