--- a/tasks/velero-uninstall.yaml
+++ b/tasks/velero-uninstall.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   desc: use task `velero-uninstall` to uninstall Velero
   nodeName: anymaster
+  typeRef: cluster
   steps:
     - name: Uninstall Velero Server
       content: kubectl delete namespace/velero clusterrolebinding/velero & kubectl delete crds -l component=velero
