--- a/tasks/add-hpa.yaml
+++ b/tasks/add-hpa.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   desc: use task `add-hpa` to add hpa for deployment in specified namespace within a Kubernetes cluster.
   nodeName: anymaster
+  typeRef: cluster
   variables:
     name: ""
     resource_type: deploy
