--- a/tasks/check-svc-existed.yaml
+++ b/tasks/check-svc-existed.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   desc: use task `check-svc-existed` to check whether the svc existed and get svc namespace, variables must to set `svc`
   nodeName: anymaster
+  typeRef: cluster
   variables:
     svc: ""
     namespace: ""
