--- a/tasks/clear-kubernetes.yaml
+++ b/tasks/clear-kubernetes.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   desc: use task `clear-kubernetes` to clear exception pods in specified namespace within a Kubernetes cluster.
   nodeName: anymaster
+  typeRef: cluster
   variables:
     namespace: ""
   steps:
