--- a/tasks/drain-node.yaml
+++ b/tasks/drain-node.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   desc: use task `drain-node` to drain node in cluster, variables must to set `node` 
   nodeName: anymaster
+  typeRef: cluster
   variables:
     node: ""
   steps:
