--- a/tasks/get-pod-logs-byname.yaml
+++ b/tasks/get-pod-logs-byname.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   desc: use task `get-pod-logs-byname` to get pod logs in cluster, variables must to set `podname`、`namespace`, avaliable to set `topk`
   nodeName: anymaster
+  typeRef: cluster
   variables:
     namespace: ""
     podname: ""
