--- a/tasks/install-descheduler.yaml
+++ b/tasks/install-descheduler.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   desc: use task `install-descheduler` to install descheduler in Kubernetes 
   nodeName: anymaster
+  typeRef: cluster
   variables:
     proxy: https://mirror.ghproxy.com/
     action: apply
