--- a/tasks/list-nodes.yaml
+++ b/tasks/list-nodes.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   desc: use task `list-nodes` to list all **nodes** in cluster
   nodeName: anymaster
+  typeRef: cluster
   steps:
     - name: list nodes
       content: kubectl get nodes
