--- a/tasks/list-pipelines.yaml
+++ b/tasks/list-pipelines.yaml
@@ -8,6 +8,7 @@ spec:
   variables:
     namespace: ops-system
   nodeName: anymaster
+  typeRef: cluster
   steps:
     - name: list pipelines
       content: kubectl get pipelines.crd.chenshaowen.com -n ${namespace} -o custom-columns=NAME:.metadata.name,DESCRIPTION:.spec.desc
