--- a/tasks/top-nodes-bymem.yaml
+++ b/tasks/top-nodes-bymem.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   desc: use task `top-nodes-bymem` to list topK usage memory of nodes in cluster, variables avaliable to set `topk`
   nodeName: anymaster
+  typeRef: cluster
   variables:
     topk: "5"
   steps:
