--- a/tasks/top-pods-bycpu-node.yaml
+++ b/tasks/top-pods-bycpu-node.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   desc: use task `top-node-pods-bycpu` to list topK usage cpu of pods in node, variables must to set `node`, avaliable to set `topk`
   nodeName: anymaster
+  typeRef: cluster
   variables:
     node: ""
     topk: "5"
