--- a/tasks/velero-restore.yaml
+++ b/tasks/velero-restore.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: ops-system
 spec:
   desc: use task `velero-restore` to restore Kubernetes Using Velero
+  nodeName: anymaster
+  typeRef: cluster
   variables:
     velero_version: v1.9.2
     cluster_name: test
