--- a/charts/ops/crds/crd.chenshaowen.com_pipelines.yaml
+++ b/charts/ops/crds/crd.chenshaowen.com_pipelines.yaml
@@ -67,6 +67,8 @@ spec:
                       type: string
                     desc:
                       type: string
+                    display:
+                      type: string
                     enum:
                       items:
                         type: string
