--- a/tasks/add-secret-imagepull.yaml
+++ b/tasks/add-secret-imagepull.yaml
@@ -8,12 +8,18 @@ spec:
   nodeName: anymaster
   typeRef: cluster
   variables:
-    secret_server: ""
-    secret_username: ""
-    secret_password: ""
-    secret_name: mysecret
-    secret_namespace: ops-system
-    clear: "false"
+    secret_server:
+      display: secret_server
+    secret_username:
+      display: secret_username
+    secret_password:
+      display: secret_password
+    secret_name:
+      default: mysecret
+    secret_namespace:
+      default: ops-system
+    clear:
+      default: "false"
   steps:
     - name: Create Pull Image Secret
       content: kubectl create secret docker-registry ${secret_name} --docker-server=${secret_server} --docker-username=${secret_username} --docker-password=${secret_password} -n ${secret_namespace}
