--- a/tasks/alert-gpu-drop.yaml
+++ b/tasks/alert-gpu-drop.yaml
@@ -10,9 +10,12 @@ spec:
         alert-gpu-drop: enabled
     typeRef: host
     variables:
-        desired_card_count: "8"
-        cluster: "default"
-        notifaction: "https://xz.wps.cn/api/v1/webhook/send?key="
+        desired_card_count:
+            default: "8"
+        cluster:
+            default: default
+        notifaction:
+            default: https://xz.wps.cn/api/v1/webhook/send?key=
     steps:
         - name: alert-card-drop
           content: |
