--- a/tasks/alert-npu-cm.yaml
+++ b/tasks/alert-npu-cm.yaml
@@ -9,8 +9,10 @@ spec:
     nodeName: "anymaster"
     typeRef: cluster
     variables:
-        cluster: "default"
-        notifaction: "https://xz.wps.cn/api/v1/webhook/send?key="
+        cluster: 
+            default: default
+        notifaction: 
+            default: https://xz.wps.cn/api/v1/webhook/send?key=
     steps:
         - name: alert-npu-cm
           content: |
