--- a/tasks/check-pod-existed.yaml
+++ b/tasks/check-pod-existed.yaml
@@ -8,7 +8,8 @@ spec:
   nodeName: anymaster
   typeRef: cluster
   variables:
-    podname: ""
+    podname:
+      display: pod name
   steps:
     - name: Check pod existed
       content: |
