--- a/charts/ops/crds/crd.chenshaowen.com_tasks.yaml
+++ b/charts/ops/crds/crd.chenshaowen.com_tasks.yaml
@@ -98,7 +98,28 @@ spec:
                 type: string
               variables:
                 additionalProperties:
-                  type: string
+                  properties:
+                    default:
+                      type: string
+                    desc:
+                      type: string
+                    display:
+                      type: string
+                    enum:
+                      items:
+                        type: string
+                      type: array
+                    examples:
+                      items:
+                        type: string
+                      type: array
+                    regex:
+                      type: string
+                    required:
+                      type: boolean
+                    value:
+                      type: string
+                  type: object
                 type: object
             type: object
         type: object
