--- a/tasks/alert-usage-disk.yaml
+++ b/tasks/alert-usage-disk.yaml
@@ -9,9 +9,12 @@ spec:
     nodeName: "anymaster"
     typeRef: cluster
     variables:
-        cluster: "default"
-        usage: "80"
-        notifaction: "https://xz.wps.cn/api/v1/webhook/send?key="
+        cluster:
+            default: default
+        usage:
+            default: "80"
+        notifaction:
+            default: https://xz.wps.cn/api/v1/webhook/send?key=
     steps:
         - name: alert-usage-disk
           content: |
