--- a/tasks/check-node-existed.yaml
+++ b/tasks/check-node-existed.yaml
@@ -8,7 +8,8 @@ spec:
   nodeName: anymaster
   typeRef: cluster
   variables:
-    node: ""
+    node:
+      display: node
   steps:
     - name: Check node existed
       content: |
