--- a/tasks/clear-kubernetes.yaml
+++ b/tasks/clear-kubernetes.yaml
@@ -8,7 +8,8 @@ spec:
   nodeName: anymaster
   typeRef: cluster
   variables:
-    namespace: ""
+    namespace:
+      display: namespace
   steps:
     - name: clear Evicted pod
       content: kubectl get pods ${namespace} -o wide | grep Evicted | awk '{print $1,$2}' | xargs -L1 kubectl delete pod --grace-period=0 --force -n
