--- a/tasks/drain-node.yaml
+++ b/tasks/drain-node.yaml
@@ -8,7 +8,8 @@ spec:
   nodeName: anymaster
   typeRef: cluster
   variables:
-    node: ""
+    node:
+      display: node name
   steps:
     - name: Cordon Node
       content: kubectl cordon ${node}
