--- a/tasks/get-diskio-byfio.yaml
+++ b/tasks/get-diskio-byfio.yaml
@@ -6,8 +6,10 @@ metadata:
 spec:
   desc: use task `get-diskio-byfio` to run fio to test disk and get a report in specified path for specified host
   variables:
-    filename: "/tmp/testfile"
-    size: 100m
+    filename: 
+      default: "/tmp/testfile"
+    size: 
+      default: "100m"
   steps:
     - name: Rand_Read_Testing
       content: fio -direct=1 -iodepth=128 -rw=randread -ioengine=libaio -bs=4k -size=${size} -numjobs=1 -runtime=1000 -group_reporting -filename=${filename} --allow_mounted_write=1 -name=Rand_Read_Testing
