--- a/tasks/get-node-status.yaml
+++ b/tasks/get-node-status.yaml
@@ -8,7 +8,8 @@ spec:
   nodeName: anymaster
   typeRef: cluster
   variables:
-    node: ""
+    node:
+      display: node name
   steps:
     - name: get node status
       content: kubectl get nodes ${node} -o wide
