--- a/tasks/install-descheduler.yaml
+++ b/tasks/install-descheduler.yaml
@@ -8,9 +8,12 @@ spec:
   nodeName: anymaster
   typeRef: cluster
   variables:
-    proxy: https://mirror.ghproxy.com/
-    action: apply
-    kubeconfig: "/etc/kubernetes/admin.conf"
+    proxy: 
+      default: https://mirror.ghproxy.com/
+    action: 
+      default: apply
+    kubeconfig: 
+      default: "/etc/kubernetes/admin.conf"
   steps:
     - name: ${action} rbac
       content: kubectl --kubeconfig ${kubeconfig} ${action} -f ${proxy}https://raw.githubusercontent.com/shaowenchen/hubimage/master/descheduler/v0.25.1-rbac.yaml
