--- a/tasks/install-longhorn.yaml
+++ b/tasks/install-longhorn.yaml
@@ -8,9 +8,12 @@ spec:
   nodeName: anymaster
   typeRef: cluster
   variables:
-    action: apply
-    version: 1.4.0
-    kubeconfig: "/etc/kubernetes/admin.conf"
+    action: 
+      default: apply
+    version: 
+      default: 1.4.0
+    kubeconfig: 
+      default: "/etc/kubernetes/admin.conf"
   steps:
     - name: ${action} longhorn
       content: kubectl --kubeconfig ${kubeconfig} ${action} -f https://raw.githubusercontent.com/longhorn/longhorn/v${version}/deploy/longhorn.yaml
