--- a/tasks/list-error-events-bysvc.yaml
+++ b/tasks/list-error-events-bysvc.yaml
@@ -8,9 +8,12 @@ spec:
   nodeName: anymaster
   typeRef: cluster
   variables:
-    namespace: ""
-    topk: "50"
-    svc: ""
+    namespace:
+      display: namespace
+    svc:
+      display: svc
+    topk: 
+      default: "50"
   steps:
     - name: list svc events
       content: kubectl get events -n ${namespace} |grep ${svc} | grep -i 'wan\|err' | awk '{$1=$2=$3=$4=""; print $0}' | head -n ${topk}
