--- a/tasks/list-pods.yaml
+++ b/tasks/list-pods.yaml
@@ -8,7 +8,8 @@ spec:
   nodeName: anymaster
   typeRef: cluster
   variables:
-    namespace: ""
+    namespace:
+      default: default
   steps:
     - name: list pods
       content: kubectl get pod -n ${namespace} |  awk '{print $1, $2, $5}'
