--- a/tasks/top-pods-bymem-node.yaml
+++ b/tasks/top-pods-bymem-node.yaml
@@ -8,8 +8,10 @@ spec:
   nodeName: anymaster
   typeRef: cluster
   variables:
-    node: ""
-    topk: "5"
+    node: 
+      desc: node name
+    topk: 
+      default: "5"
   steps:
     - name: list topK usage memory of pods in node
       content: |
