--- a/tasks/velero-status.yaml
+++ b/tasks/velero-status.yaml
@@ -8,7 +8,8 @@ spec:
   nodeName: anymaster
   typeRef: cluster
   variables:
-    velero_version: v1.9.2
+    velero_version: 
+      default: v1.9.2
   steps:
     - name: Backup Status
       content: ./velero-${velero_version}-linux-amd64/velero get backups
